Mon Dec 11 19:36:13 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * config/yacc.mpb:

          Fixed the postcommand for the custom rule so that both source and
          header file are created correctly.

        * modules/ProjectCreator.pm:

          Fixed a bug where defaults source files for custom definitions may
          result in incorrect file addition if the generated source file is
          not the default extension (.cpp).

Wed Dec  6 18:08:49 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * docs/README:
        * modules/ProjectCreator.pm:
        * templates/em3.mpd:
        * templates/nmake.mpd:
        * templates/vc6.mpd:
        * templates/vc7.mpd:
        * templates/vc8.mpd:

          Added a new source component level setting, no_pch.  When set, it
          specifies that precompiled headers should not be used for the
          source files listed within the scope of it's setting.

Tue Dec  5 03:29:14 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * docs/MPC.sgml:
        * docs/USAGE:
        * modules/Driver.pm:
        * modules/MPC.pm:
        * modules/MWC.pm:
        * modules/Options.pm:
        * mpc.pl:
        * mwc.pl:

          Removed the default project type and simplified the addition of
          new project/workspace creators.  Now, you must specify a type on
          the command line or a default type in the MPC.cfg.

Mon Dec  4 16:02:43 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Driver.pm:

          If no MPC.cfg exists in MPC/config, search the config path from
          the starting point for mwc.pl (e.g., $ACE_ROOT/bin/mwc.pl).  This
          precludes the removal of $ACE_ROOT/bin/mwc.pl.

        * config/base.cfg:

          Removed this file.  It is no longer necessary to provide the
          search paths for ACE related projects.

Mon Dec  4 15:08:19 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * config/base.cfg:
